spring boot - hello web

--- a/BerlinAIT/HelloWeb/src/main/resources/templates/greeting.html
+++ b/BerlinAIT/HelloWeb/src/main/resources/templates/greeting.html
@@ -2,7 +2,7 @@
 <html xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
-    <title>MVC project for Spring Boot</title>
+    <title>Web project for Spring Boot</title>
 </head>
 <body>
     <p th:text="'Hello, ' + ${name} + '!'"/>
